tests/positive/arena_block_return.osc
fn! main() {
    let len: i32 = arena {
        let text: str = "hello world";
        str_len(text)
    };
    println("len: {len}");
}
