tests/negative/arena_escape.osc
// Test: arena block cannot return arena-allocated types
// EXPECT ERROR: arena block cannot return arena-allocated type

fn! main() {
    let text: str = arena {
        "hello"
    };
    println(text);
}
